cmd/pint/tests/0004_fail_invalid_yaml.txt
pint.error --no-color lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=info msg="Loading configuration file" path=.pint.hcl
level=error msg="Failed to parse file content" error="yaml: line 4: did not find expected key" lines=1-7 path=rules/bad.yaml
rules/bad.yaml:4 Fatal: did not find expected key (yaml/parse)
 4 | 

rules/ok.yml:5 Fatal: syntax error: unclosed left bracket (promql/syntax)
 5 |     expr: sum(foo[5m)

level=info msg="Problems found" Fatal=2
level=fatal msg="Fatal error" error="found 1 problem(s) with severity Bug or higher"
-- rules/ok.yml --
groups:
- name: foo
  rules:
  - record: sum:missing
    expr: sum(foo[5m)

-- rules/bad.yaml --
xxx:
  xxx:
  xxx:

- xx
- yyy

-- .pint.hcl --
parser {
  relaxed = [".*"]
}
